Fix about size on mobile devices, always render the seasons content only when it is not mobile and fix navigation issues on mobile

--- a/src/app/(sections)/About/About.module.scss
+++ b/src/app/(sections)/About/About.module.scss
@@ -3,9 +3,9 @@
 .about {
   position: relative;
   height: calc(100vh + 900px);
-  width: 100vw;
+  width: 100svw;
+  max-width: 100svw;
   background-color: $beige-light;
-  border: 1px solid transparent;
   padding-top: 100px;
 }
 
@@ -16,6 +16,7 @@
   top: 0;
   inset-inline: 0;
   height: 100vh;
+  width: 100%;
   .aboutIntroText {
     display: flex;
     flex-direction: column;
@@ -35,13 +36,13 @@
   .stickyImageContainer {
     position: absolute;
     inset-inline: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     perspective: 700px;
     transform-style: preserve-3d;
 
     .stickyImage {
-      width: 100%;
+      width: 100svw;
       height: 100%;
       will-change: transform, clip-path, margin-top;
     }
