--- a/src/app/(sections)/Hero/Hero.module.scss
+++ b/src/app/(sections)/Hero/Hero.module.scss
@@ -67,7 +67,7 @@
   height: 60%;
   display: flex;
   flex-direction: column;
-  padding: 100px 20px;
+  padding: 45px 20px;
 
   @media(max-height: 640px) {
     padding: 30px 20px;
